--- a/pages/login.html
+++ b/pages/login.html
@@ -1,184 +1,235 @@
 <!DOCTYPE html>
 <html lang="es">
-<!--Metadatos-->
+  <!--Metadatos-->
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Iniciar Sesión | ChangeWear</title>
-  <meta name="description" content="Sitio de venta online (Beta)" />
-  <link rel="icon" href="../img/cwIcon.png" type="image/png" />
-  <!-- FontAwesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/estilos.css" />
-  <!-- Javascript -->
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/main.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Iniciar Sesión | ChangeWear</title>
+    <meta name="description" content="Sitio de venta online (Beta)" />
+    <link rel="icon" href="../img/cwIcon.png" type="image/png" />
+    <!-- FontAwesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/estilos.css" />
+    <!-- Javascript -->
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
+  </head>
 
-<!--Inicio de la página-->
+  <!--Inicio de la página-->
 
-<body>
-  <!-- Headbar -->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <!-- Toggler del navbar -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain"
-        aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- Marca de la página -->
-      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
-      <!-- Los items del Navbar -->
-      <div class="collapse navbar-collapse" id="navbarTogglerMain">
-        <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="mujeres.html">Mujeres</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="hombre.html">Hombres</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ninos.html">Niños</a>
-          </li>
-        </ul>
-        <!--Barra de busqueda-->
-        <form class="form-inline my-0 mr-0 nav-item">
-          <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar" />
-          <button class="btn btn-outline-success my-1 my-md-0" type="submit">
-            <i class="fas fa-search"></i>
-          </button>
-        </form>
-        <!-- Botón de Usuario -->
-        <div class="btn-group dropdown ml-2 d-none d-lg-block">
-          <a class="btn btn-info" href="login.html">
-            <i class="fas fa-user"></i>
-          </a>
+  <body>
+    <!-- Headbar -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <!-- Toggler del navbar -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarTogglerMain"
+          aria-controls="navbarTogglerMain"
+          aria-expanded="false"
+          aria-label="Navegación"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Marca de la página -->
+        <a
+          class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2"
+          href="../index.html"
+          >ChangeWear</a
+        >
+        <!-- Los items del Navbar -->
+        <div class="collapse navbar-collapse" id="navbarTogglerMain">
+          <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="mujeres.html">Mujeres</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hombre.html">Hombres</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="ninos.html">Niños</a>
+            </li>
+          </ul>
+          <!--Barra de busqueda -->
+          <form class="form-inline my-0 mr-2 nav-item">
+            <input
+              class="form-control mr-0 text_area"
+              type="search"
+              placeholder="Buscar"
+              aria-label="Buscar"
+            />
+            <button class="btn btn-outline-success my-0" type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+          <!--Botón de iniciar sesión-->
+          <ul class="navbar-nav my-0">
+            <li class="nav-item mr-2">
+              <a class="btn btn-info" href="login.html">
+                <i class="fas fa-user"></i>
+              </a>
+            </li>
+            <!--Botón carro de compra-->
+            <li class="nav-item">
+              <a class="btn btn-danger" href="carro.html">
+                <i class="fas fa-shopping-cart"></i>
+              </a>
+            </li>
+          </ul>
         </div>
-        <!-- Botón del carro de compras 2-->
-        <div class="btn-group dropdown ml-2 d-none d-lg-block">
-          <a class="btn btn-danger" href="carro.html">
-            <i class="fas fa-shopping-cart"></i>
-          </a>
-        </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <br />
+    <br />
 
-  <!-- Formulario -->
-  <main id="main">
-    <section class="section section--account">
-      <div class="container">
-        <div class="h-max-width-1030 mx-auto">
-          <div class="row">
-            <div class="section__column section__column--small-margin col-lg-6">
-              <div class="form-box form-box--border form-box--login">
-                <div class="login-form">
-                  <h1 class="form-box__title title title_xs">
-                    Inicia sesión
-                  </h1>
-                  <form class="form">
-                    <div class="form-fields">
-                      <div class="form-group">
-                        <label for="loginEmail" class="label-title">Email*</label>
-                        <input type="email" id="loginEmail" class="form-control untouched pristine required" />
-                        <span class="invalid-feedback"></span>
+    <!-- Formulario -->
+    <main id="main">
+      <section class="section section--account">
+        <div class="container">
+          <div class="h-max-width-1030 mx-auto">
+            <div class="row">
+              <div
+                class="section__column section__column--small-margin col-lg-6"
+              >
+                <div class="form-box form-box--border form-box--login">
+                  <div class="login-form">
+                    <h1 class="form-box__title title title_xs">
+                      Inicia sesión
+                    </h1>
+                    <form class="form">
+                      <div class="form-fields">
+                        <div class="form-group">
+                          <label for="loginEmail" class="label-title"
+                            >Email*</label
+                          >
+                          <input
+                            type="email"
+                            id="loginEmail"
+                            class="form-control untouched pristine required"
+                          />
+                          <span class="invalid-feedback"></span>
+                        </div>
+                        <div class="form-group">
+                          <label for="loginPassword" class="label-title"
+                            >Contraseña*</label
+                          >
+                          <input
+                            type="password"
+                            id="loginPassword"
+                            class="form-control untouched pristine required"
+                          />
+                          <span class="invalid-feedback"></span>
+                        </div>
                       </div>
-                      <div class="form-group">
-                        <label for="loginPassword" class="label-title">Contraseña*</label>
-                        <input type="password" id="loginPassword" class="form-control untouched pristine required" />
-                        <span class="invalid-feedback"></span>
+                      <div class="form-box__actions">
+                        <button
+                          type="submit"
+                          class="button button--secondary button--more"
+                        >
+                          <span class="button__text">Ingresar</span>
+                        </button>
                       </div>
-                    </div>
-                    <div class="form-box__actions">
-                      <button type="submit" class="button button--secondary button--more">
-                        <span class="button__text">Ingresar</span>
-                      </button>
-                    </div>
-                  </form>
+                    </form>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <div class="section__column col-lg-6">
-              <div class="form-box form-box--border">
-                <h2 class="form-box__title title title--xs">Cliente Nuevo</h2>
+              <div class="section__column col-lg-6">
+                <div class="form-box form-box--border">
+                  <h2 class="form-box__title title title--xs">Cliente Nuevo</h2>
 
-                <div class="form-box__text h-text">
-                  <p>Crear una cuenta tiene muchos beneficios:</p>
-                  <p>
-                    Pago más rápido, guardar más de una dirección, ofertas
-                    exclusivas, seguimiento de pedidos y mucho más.
-                  </p>
-                </div>
+                  <div class="form-box__text h-text">
+                    <p>Crear una cuenta tiene muchos beneficios:</p>
+                    <p>
+                      Pago más rápido, guardar más de una dirección, ofertas
+                      exclusivas, seguimiento de pedidos y mucho más.
+                    </p>
+                  </div>
 
-                <div class="form-box__actions text-center">
-                  <a class="button button--secondary" href="registroUsuario.html">
-                    <span class="button__text">Crear una cuenta</span>
-                  </a>
+                  <div class="form-box__actions text-center">
+                    <a
+                      class="button button--secondary"
+                      href="registroUsuario.html"
+                    >
+                      <span class="button__text">Crear una cuenta</span>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
-  <br />
-  <br />
+      </section>
+    </main>
+    <br />
+    <br />
 
-  <!--Footer -->
-  <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md">
-          <h3 class="text-uppercase">Logo</h3>
-          <p>Logo de la compañía</p>
+    <!--Footer -->
+    <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md">
+            <h3 class="text-uppercase">Logo</h3>
+            <p>Logo de la compañía</p>
+          </div>
+          <div class="col-md">
+            <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+            <ul class="mb-0 pb-2">
+              <li class="text"><a class="nav-link" href="vision.html">Nuestra Visión</a></li>
+              <li>Noticias</li>
+              <li>Empleo</li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+            <ul class="mb-0 pb-2">
+              <li>Pedidos</li>
+              <li>Cambios y Devoluciones</li>
+              <li>Formas de Pago</li>
+              <li>Comunícate con Nosotros</li>
+            </ul>
+          </div>
         </div>
-        <div class="col-md">
-          <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
-          <ul class="mb-0 pb-2">
-            <li>Nuestra Visión</li>
-            <li>Noticias</li>
-            <li>Empleo</li>
-          </ul>
-        </div>
-        <div class="col-md">
-          <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
-          <ul class="mb-0 pb-2">
-            <li>Pedidos</li>
-            <li>Cambios y Devoluciones</li>
-            <li>Formas de Pago</li>
-            <li>Comunícate con Nosotros</li>
-          </ul>
+        <hr class="footer-hr my-2 py-0" />
+        <div class="row">
+          <div class="col-4 text-left">
+            <i class="fab fa-twitter mx-1 text-info"></i>
+            <i class="fab fa-facebook-f mx-1 text-info"></i>
+            <i class="fab fa-instagram mx-1 text-info"></i>
+          </div>
+          <div class="col-8 text-right copyright">
+            Todos los derechos reservados.
+          </div>
         </div>
       </div>
-      <hr class="footer-hr my-2 py-0" />
-      <div class="row">
-        <div class="col-4 text-left">
-          <i class="fab fa-twitter mx-1 text-info"></i>
-          <i class="fab fa-facebook-f mx-1 text-info"></i>
-          <i class="fab fa-instagram mx-1 text-info"></i>
-        </div>
-        <div class="col-8 text-right copyright">
-          Todos los derechos reservados.
-        </div>
-      </div>
-    </div>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
-</body>
-
+    </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
