--- a/pages/vision.html
+++ b/pages/vision.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)" />
-    <link rel="icon" href="img/cwIcon.png" type="image/png" />
+    <link rel="icon" href="../img/cwIcon.png" type="image/png" />
     <!-- FontAwesome -->
     <link
       rel="stylesheet"
@@ -44,86 +44,46 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Marca de la página -->
-        <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html"
-          >ChangeWear</a
-        >
+        <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
         <!-- Los items del Navbar -->
         <div class="collapse navbar-collapse" id="navbarTogglerMain">
-          <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html"
-                >Inicio<span class="sr-only">(actual)</span></a
-              >
-            </li>
+          <ul class="navbar-nav mr-auto mt-1 mt-lg-0">            
             <li class="nav-item">
               <a class="nav-link" href="mujeres.html">Mujeres</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Hombres</a>
+              <a class="nav-link" href="hombre.html">Hombres</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Niños</a>
-            </li>
-            <!-- Botón del usuario 1 -->
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="registroUsuario.html">
-                <i class="fas fa-user"></i> Usuario
-              </a>
-            </li>
-            <!-- Botón del carro de compras 1 -->
-            <li class="nav-item dropdown d-lg-none">
-              <a
-                class="nav-link dropdown-toggle"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                <i class="fas fa-shopping-cart"></i> Carro de compra
-              </a>
-              <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="#">Item 1</a>
-                <a class="dropdown-item" href="#">Item 2</a>
-                <a class="dropdown-item" href="#">Item 3</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Ver carro</a>
-              </div>
+              <a class="nav-link" href="ninos.html">Niños</a>
             </li>
           </ul>
-          <form class="form-inline my-0 mr-0 nav-item">
+          <!--Barra de busqueda -->
+          <form class="form-inline my-0 mr-2 nav-item">
             <input
               class="form-control mr-0 text_area"
               type="search"
               placeholder="Buscar"
               aria-label="Buscar"
             />
-            <button class="btn btn-outline-success my-1 my-md-0" type="submit">
+            <button class="btn btn-outline-success my-0" type="submit">
               <i class="fas fa-search"></i>
             </button>
           </form>
-          <!-- Botón de Usuario -->
-          <div class="btn-group dropdown ml-2 d-none d-lg-block">
-            <a class="btn btn-info" href="registroUsuario.html">
-              <i class="fas fa-user"></i>
-            </a>
-          </div>
-          <!-- Botón del carro de compras 2-->
-          <div class="btn-group dropdown ml-2 d-none d-lg-block">
-            <a
-              class="btn btn-danger dropdown-toggle"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i class="fas fa-shopping-cart"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="#">Item 1</a>
-              <a class="dropdown-item" href="#">Item 2</a>
-              <a class="dropdown-item" href="#">Item 3</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Ver carro</a>
-            </div>
-          </div>
+          <!--Botón de iniciar sesión-->
+          <ul class="navbar-nav my-0">
+            <li class="nav-item mr-2">
+              <a class="btn btn-info" href="login.html">
+                <i class="fas fa-user"></i>
+              </a>
+            </li>
+            <!--Botón carro de compra-->
+            <li class="nav-item">
+              <a class="btn btn-danger" href="carro.html">
+                <i class="fas fa-shopping-cart"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
@@ -141,7 +101,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
 
             <ul class="mb-0 pb-2">
-              <li class="btn-link" href="vision.html">Nuestra Visión</li>
+              <li class="text"><a class="nav-link" href="vision.html">Nuestra Visión</a></li>
               <li>Noticias</li>
               <li>Empleo</li>
             </ul>
