agregados estilos para login - referencia a estilos en las paginas - nuevo login

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </li>
             <!--Botón carro de compra-->
             <li class="nav-item">
-              <a class="btn btn-danger " href="pages/carro.html">
+              <a class="btn btn-danger" href="pages/carro.html">
                 <i class="fas fa-shopping-cart"></i>
               </a>
             </li>
@@ -396,18 +396,32 @@
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2">
-              <li class="text"><a class="nav-link" href="pages/vision.html">Nuestra Visión</a></li>
-              <li>Noticias</li>
-              <li>Empleo</li>
+              <li class="text">
+                <a class="nav-link" href="pages/vision.html">Nuestra Visión</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Noticias</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Empleo</a>
+              </li>
             </ul>
           </div>
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
             <ul class="mb-0 pb-2">
-              <li>Pedidos</li>
-              <li>Cambios y Devoluciones</li>
-              <li>Formas de Pago</li>
-              <li>Comunícate con Nosotros</li>
+              <li class="text">
+                <a class="nav-link" href="#">Pedidos</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Cambios y devoluciones</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Formas de pago</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Contáctanos</a>
+              </li>
             </ul>
           </div>
         </div>
