--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -25,7 +25,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
@@ -47,7 +47,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Marca de la página -->
-        <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
+        <a
+          class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2"
+          href="../index.html"
+          >ChangeWear</a
+        >
         <!-- Los items del Navbar -->
         <div class="collapse navbar-collapse" id="navbarTogglerMain">
           <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
@@ -55,7 +59,9 @@
               <a class="nav-link" href="mujeres.html">Mujeres</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="hombre.html">Hombres<span class="sr-only">(actual)</span></a>
+              <a class="nav-link" href="hombre.html"
+                >Hombres<span class="sr-only">(actual)</span></a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="ninos.html">Niños</a>
@@ -270,18 +276,32 @@
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2">
-              <li class="text"><a class="nav-link" href="vision.html">Nuestra Visión</a></li>
-              <li>Noticias</li>
-              <li>Empleo</li>
+              <li class="text">
+                <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Noticias</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Empleo</a>
+              </li>
             </ul>
           </div>
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
             <ul class="mb-0 pb-2">
-              <li>Pedidos</li>
-              <li>Cambios y Devoluciones</li>
-              <li>Formas de Pago</li>
-              <li>Comunícate con Nosotros</li>
+              <li class="text">
+                <a class="nav-link" href="#">Pedidos</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Cambios y devoluciones</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Formas de pago</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Contáctanos</a>
+              </li>
             </ul>
           </div>
         </div>
