--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -25,7 +25,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
@@ -259,18 +259,32 @@
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2">
-              <li class="text"><a class="nav-link" href="vision.html">Nuestra Visión</a></li>
-              <li>Noticias</li>
-              <li>Empleo</li>
+              <li class="text">
+                <a class="nav-link" href="vision.html">Nuestra Visión</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Noticias</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Empleo</a>
+              </li>
             </ul>
           </div>
           <div class="col-md">
             <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
             <ul class="mb-0 pb-2">
-              <li>Pedidos</li>
-              <li>Cambios y Devoluciones</li>
-              <li>Formas de Pago</li>
-              <li>Comunícate con Nosotros</li>
+              <li class="text">
+                <a class="nav-link" href="#">Pedidos</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Cambios y devoluciones</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Formas de pago</a>
+              </li>
+              <li class="text">
+                <a class="nav-link" href="#">Contáctanos</a>
+              </li>
             </ul>
           </div>
         </div>
