--- a/pages/carro.html
+++ b/pages/carro.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <!-- Javascript -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
@@ -211,18 +211,32 @@
                     <div class="col-md">
                         <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
                         <ul class="mb-0 pb-2">
-                            <li class="text"><a class="nav-link" href="vision.html">Nuestra Visión</a></li>
-                            <li>Noticias</li>
-                            <li>Empleo</li>
-                        </ul>
-                    </div>
-                    <div class="col-md">
-                        <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
-                        <ul class="mb-0 pb-2">
-                            <li>Pedidos</li>
-                            <li>Cambios y Devoluciones</li>
-                            <li>Formas de Pago</li>
-                            <li>Comunícate con Nosotros</li>
+                            <li class="text">
+                                <a class="nav-link" href="vision.html">Nuestra Visión</a>
+                              </li>
+                              <li class="text">
+                                <a class="nav-link" href="#">Noticias</a>
+                              </li>
+                              <li class="text">
+                                <a class="nav-link" href="#">Empleo</a>
+                              </li>
+                            </ul>
+                          </div>
+                          <div class="col-md">
+                            <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+                            <ul class="mb-0 pb-2">
+                              <li class="text">
+                                <a class="nav-link" href="#">Pedidos</a>
+                              </li>
+                              <li class="text">
+                                <a class="nav-link" href="#">Cambios y devoluciones</a>
+                              </li>
+                              <li class="text">
+                                <a class="nav-link" href="#">Formas de pago</a>
+                              </li>
+                              <li class="text">
+                                <a class="nav-link" href="#">Contáctanos</a>
+                              </li>
                         </ul>
                     </div>
                 </div>
