corregida refencia a carrito y login desde pagina vision

--- a/pages/vision.html
+++ b/pages/vision.html
@@ -53,12 +53,12 @@
         <!--Botón de iniciar sesión-->
         <ul class="navbar-nav mt-1 mt-lg-0 ">
           <li class="nav-item my-sm-1 mx-lg-2">
-            <a class="btn btn-info" href="pages/login.html">
+            <a class="btn btn-info" href="login.html">
               <i class="fas fa-user"></i>
             </a>
           </li>
           <li class="nav-item my-sm-1 mx-lg-2">
-            <a class="btn btn-danger" href="pages/carro.html">
+            <a class="btn btn-danger" href="carro.html">
               <i class="fas fa-shopping-cart"></i>
             </a>
           </li>
