--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <!--Inicio de la página-->
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <header class="">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <!-- Toggler del navbar -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain"
         aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
