--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -55,14 +55,13 @@
           </button>
         </form>
         <!--Botón de iniciar sesión-->
-        <ul class="navbar-nav my-0">
-          <li class="nav-item mr-2">
+        <ul class="navbar-nav mt-1 mt-lg-0 ">
+          <li class="nav-item my-sm-1 mx-lg-2">
             <a class="btn btn-info" href="login.html">
               <i class="fas fa-user"></i>
             </a>
           </li>
-          <!--Botón carro de compra-->
-          <li class="nav-item">
+          <li class="nav-item my-sm-1 mx-lg-2">
             <a class="btn btn-danger" href="carro.html">
               <i class="fas fa-shopping-cart"></i>
             </a>
@@ -73,6 +72,7 @@
   </header>
 
   <!-- Formulario -->
+  <img class="image-fluid img-us" src="../img/seccion_mujeres/ADI-GN6702-1_1024.png" alt="">
   <div class="container register my-2">
     <div class="row">
       <div class="col-md-9 register-right">
