--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               <a class="nav-link" href="#">Formas de pago</a>
             </li>
             <li class="text">
-              <a class="nav-link" href="#">Contáctanos</a>
+              <a class="nav-link" href="pages/contacto.html">Contáctanos</a>
             </li>
           </ul>
         </div>
