correccion botones - agregados estilos pag contacto - agregada pag contacto a las referencias

--- a/pages/vision.html
+++ b/pages/vision.html
@@ -159,7 +159,7 @@
               <a class="nav-link" href="#">Formas de pago</a>
             </li>
             <li class="text">
-              <a class="nav-link" href="#">Contáctanos</a>
+              <a class="nav-link" href="contacto.html">Contáctanos</a>
             </li>
           </ul>
         </div>
