--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -299,7 +299,7 @@
                 <a class="nav-link" href="#">Formas de pago</a>
               </li>
               <li class="text">
-                <a class="nav-link" href="#">Contáctanos</a>
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
               </li>
             </ul>
           </div>
