corrección de nombre en pestaña

--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -10,7 +10,7 @@
     />
     <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Registrar Usuario - ChangeWear</title>
+    <title>Mujeres | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)" />
     <link rel="icon" href="../img/cwIcon.png" type="image/png" />
 
