--- a/pages/vision.html
+++ b/pages/vision.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>ChangeWear | Nuestra Vision</title>
+  <title>Nuestra Visión | ChangeWear</title>
   <meta name="description" content="Sitio de venta online (Beta)" />
   <link rel="icon" href="../img/cwIcon.png" type="image/png" />
   <!-- FontAwesome -->
