--- a/pages/carro.html
+++ b/pages/carro.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Registrar Usuario - ChangeWear</title>
+    <title>Carro de compra | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)">
     <link rel="icon" href="../img/cwIcon.png" type="image/png">
     <!-- FontAwesome -->
