correccion card-text de novedades (texto blanco)-cambio a card-text1 en index

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <img class="img-fluid w-50 mx-auto" alt="100%x280" src="img/destacados1.png" />
                         <div class="card-body">
                           <h4 class="card-title">Modelo X-Red</h4>
-                          <p class="card-text">
+                          <p class="card-text1">
                             Parte de nuestra nueva colección Red
                           </p>
                         </div>
@@ -197,7 +197,7 @@
                         <img class="img-fluid w-50 mx-auto" alt="100%x280" src="img/destacados2.png" />
                         <div class="card-body">
                           <h4 class="card-title">Polera</h4>
-                          <p class="card-text">
+                          <p class="card-text1">
                             Polera clasica de nuestra tienda
                           </p>
                         </div>
@@ -216,7 +216,7 @@
                         <img class="img-fluid w-50 mx-auto" alt="100%x280" src="img/destacados3.png" />
                         <div class="card-body">
                           <h4 class="card-title">New Sneak</h4>
-                          <p class="card-text">
+                          <p class="card-text1">
                             Las nuevas Sneakers de temporada
                           </p>
                         </div>
@@ -239,7 +239,7 @@
                         <img class="img-fluid w-50 mx-auto" alt="100%x280" src="img/destacados4.png" />
                         <div class="card-body">
                           <h4 class="card-title">Blanco</h4>
-                          <p class="card-text">Especial conjunto</p>
+                          <p class="card-text1">Especial conjunto</p>
                         </div>
                         <div class="card-footer">
                           <a href="pages/producto.html">
@@ -256,7 +256,7 @@
                         <img class="img-fluid w-50 mx-auto" alt="100%x280" src="img/destacados5.png" />
                         <div class="card-body">
                           <h4 class="card-title">X-Red Sombreros</h4>
-                          <p class="card-text">
+                          <p class="card-text1">
                             Parte de nuestra nueva colección
                           </p>
                         </div>
@@ -275,7 +275,7 @@
                         <img class="img-fluid w-50 mx-auto" alt="100%x280" src="img/destacados6.png" />
                         <div class="card-body">
                           <h4 class="card-title">Relax Walk</h4>
-                          <p class="card-text">Ultra light sneakers</p>
+                          <p class="card-text1">Ultra light sneakers</p>
                         </div>
                         <div class="card-footer">
                           <a href="pages/producto.html">
