--- a/pages/login.html
+++ b/pages/login.html
@@ -112,8 +112,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md">
-          <h3 class="text-uppercase">Logo</h3>
-          <p>Logo de la compañía</p>
+          <img src="../img/logo.png" class="logo" alt="" />
         </div>
         <div class="col-md">
           <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
