--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- Inicio catalogo -->
     <div class="container my-5">
       <div class="container my-3">
-        <h1 class="display-4">Catalogos</h1>
+        <h1 class="display-4">Catálogos</h1>
       </div>
       <div class="container d-flex justify-content-center">
         <div class="row">
