--- a/index.html
+++ b/index.html
@@ -50,23 +50,15 @@
           </li>
           <!-- Botón del usuario 1 -->
           <li class="nav-item d-lg-none">
-              <a class="nav-link" href="registroUsuario.html">
-                  <i class="fas fa-user"></i> Usuario
+              <a class="nav-link" href="pages/login.html">
+                  <i class="fas fa-user"></i> Iniciar sesión
               </a>
           </li>
           <!-- Botón del carro de compras 1 -->
-          <li class="nav-item dropdown d-lg-none">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                  aria-expanded="false">
+          <li class="nav-item d-lg-none">
+              <a class="nav-link"  href="pages/carro.html">
                   <i class="fas fa-shopping-cart"></i> Carro de compra
               </a>
-              <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="pages/producto.html">Producto 1</a>
-                <a class="dropdown-item" href="pages/producto.html">Producto 2</a>
-                <a class="dropdown-item" href="pages/producto.html">Producto 3</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="pages/carro.html">Ver carro</a>
-              </div>
           </li>
         </ul>
         <!--Barra de busqueda -->
@@ -84,17 +76,9 @@
         </div>
         <!-- Botón del carro de compras 2-->
         <div class="btn-group dropdown ml-2 d-none d-lg-block">
-            <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
+            <a class="btn btn-danger" href="pages/carro.html">
                 <i class="fas fa-shopping-cart"></i>
             </a>
-            <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="pages/producto.html">Producto 1</a>
-                <a class="dropdown-item" href="pages/producto.html">Producto 2</a>
-                <a class="dropdown-item" href="pages/producto.html">Producto 3</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="pages/carro.html">Ver carro</a>
-            </div>
         </div>
       </div>
     </nav>
