--- a/pages/login.html
+++ b/pages/login.html
@@ -133,7 +133,7 @@
               placeholder="Contraseña"
             />
             <input class="buttons" type="submit" name="" value="Ingresar" />
-            <p><a href="#">¿Olvidastes tu Contraseña?</a></p>
+            <p><a href="#">¿Olvidaste tu contraseña?</a></p>
           </div>
           <div class="col-lg-5 my-sm-1 ml-md-1 border rounded">
             <div class="info">
