--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -166,7 +166,7 @@
                     <input
                       type="password"
                       class="form-control"
-                      placeholder="Confirmar Contraseña *"
+                      placeholder="Confirmar contraseña *"
                       value=""
                     />
                   </div>
@@ -177,7 +177,7 @@
                     <input
                       type="email"
                       class="form-control"
-                      placeholder="Correo Electronico *"
+                      placeholder="Correo electronico *"
                       value=""
                     />
                   </div>
@@ -188,7 +188,7 @@
                       maxlength="10"
                       name="txtEmpPhone"
                       class="form-control"
-                      placeholder="Telefono *"
+                      placeholder="Teléfono *"
                       value=""
                     />
                   </div>
@@ -196,7 +196,7 @@
                   <div class="form-group">
                     <select class="form-control">
                       <option class="hidden" selected disabled>
-                        Seleccione su Region
+                        Seleccione su región
                       </option>
                       <option>Arica y Parinacota</option>
                       <option>Tarapacá</option>
@@ -220,7 +220,7 @@
                     <input
                       type="text"
                       class="form-control"
-                      placeholder="Direccion *"
+                      placeholder="Dirección *"
                       value=""
                     />
                   </div>
