--- a/pages/carro.html
+++ b/pages/carro.html
@@ -27,8 +27,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <body>
@@ -111,10 +111,9 @@
         <div class="container">
           <div class="row w-100">
             <div class="col-lg-12 col-md-12 col-12">
-              <h3 class="display-5 mb-2 text-center">Carro de Compra</h3>
+              <h3 class="display-5 mb-2 text-center">Carro de compra</h3>
               <p class="mb-5 text-center">
-                <i class="text-info font-weight-bold">3</i> productos en el
-                carro
+                <i class="text-info font-weight-bold">3</i>Productos en el carro
               </p>
               <table
                 id="shoppingCart"
@@ -251,7 +250,7 @@
               <div class="float-right text-right">
                 <h4>Total Parcial:</h4>
                 <h1>$9999</h1>
-                <small>+ Coste de Envio: $100</small>
+                <small>+ Coste de envio: $100</small>
               </div>
             </div>
           </div>
@@ -282,7 +281,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
