--- a/pages/login.html
+++ b/pages/login.html
@@ -27,8 +27,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <!--Inicio de la página-->
@@ -123,7 +123,7 @@
               type="text"
               name="usuario"
               value=""
-              placeholder="Usuario"
+              placeholder="Email"
             />
             <input
               class="controls"
@@ -137,7 +137,7 @@
           </div>
           <div class="col-lg-5 my-sm-1 ml-md-1 border rounded">
             <div class="info">
-              <h2 class="mt-1">Cliente Nuevo</h2>
+              <h2 class="mt-1">Cliente nuevo</h2>
               <div class="text">
                 <p>Crear una cuenta tiene muchos beneficios:</p>
                 <p>
@@ -170,7 +170,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
