--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -27,8 +27,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <body>
@@ -110,7 +110,7 @@
       <section class="pt-5 pb-5">
         <!-- PlaceHolder Productos -->
         <div class="container">
-          <h2 class="display-4 my-4">Hombre</h2>
+          <h2 class="display-4 my-4">Hombres</h2>
           <div class="row d-flex equal">
             <div class="col-md-4 mb-4">
               <div class="card h-100 border-0">
@@ -286,7 +286,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
