--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -13,12 +13,6 @@
     <title>Mujeres | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)" />
     <link rel="icon" href="../img/cwIcon.png" type="image/png" />
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Mujeres | ChangeWear</title>
-    <meta name="description" content="Sitio de venta online (Beta)" />
-    <link rel="icon" href="../img/cwIcon.png" type="image/png" />
-
     <!-- FontAwesome -->
     <link
       rel="stylesheet"
@@ -33,8 +27,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <body>
@@ -294,7 +288,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
