--- a/pages/producto.html
+++ b/pages/producto.html
@@ -27,8 +27,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <body>
@@ -180,8 +180,8 @@
               </div>
               <h6 class="mt-2">$ 9.999</h6>
               <span class="text-justify"
-                >Descripcion de un producto, hablando de su coleccion quizás.
-                Sobre su material o otros info sobre la ropa.</span
+                >Descripción de un producto, hablando de su colección quizás.
+                Sobre su material u otros. Info sobre la ropa.</span
               >
               <div class="d-flex flex-column">
                 <div class="row ml-1 my-2">
@@ -250,7 +250,7 @@
                           aria-expanded="true"
                           aria-controls="collapseOne"
                         >
-                          <h6 class="text-black">Formas de Entrega</h6>
+                          <h6 class="text-black">Formas de entrega</h6>
                         </a>
                       </h5>
                     </div>
@@ -265,13 +265,13 @@
                         <div class="d-flex flex-column">
                           <div class="row">
                             <i class="fas fa-truck mx-3"></i>
-                            <h6 class="font-weight-light">Envio a domicilio</h6>
+                            <h6 class="font-weight-light">Envío a domicilio</h6>
                           </div>
                           <div class="row">
                             <i class="fas fa-store-slash mx-3"></i>
                             <div>
                               <h6 class="font-weight-light text-danger mx-1">
-                                No Disponible
+                                No disponible
                               </h6>
                               <h6 class="font-weight-light">
                                 - Retiro en tienda
@@ -324,12 +324,12 @@
                           <td>Algodón</td>
                         </tr>
                         <tr>
-                          <th scope="row">Estilo</th>
+                          <th scope="row">Estílo</th>
                           <td>Casual</td>
                         </tr>
                         <tr>
                           <th scope="row">Tipo</th>
-                          <td>Categoria</td>
+                          <td>Categoría</td>
                         </tr>
                       </tbody>
                     </table>
@@ -353,7 +353,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
