--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -27,8 +27,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <!--Inicio de la página-->
@@ -127,7 +127,7 @@
               aria-labelledby="home-tab"
             >
               <!--Titulo de Formulario, Instrucciones de Formulario-->
-              <h3 class="register-heading">Registrar Usuario</h3>
+              <h3 class="register-heading">Registrarse</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                 a elit nec tellus consequat accumsan ac sit amet elit. Nullam
@@ -177,7 +177,7 @@
                     <input
                       type="email"
                       class="form-control"
-                      placeholder="Correo electronico *"
+                      placeholder="Correo electrónico *"
                       value=""
                     />
                   </div>
@@ -248,7 +248,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
