--- a/pages/vision.html
+++ b/pages/vision.html
@@ -25,8 +25,8 @@
     />
     <link rel="stylesheet" href="../css/estilos.css" />
     <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/main.js"></script>
   </head>
 
   <body>
@@ -114,7 +114,7 @@
       <div class="container fluid d-flex flex-column my-3">
         <div class=""></div>
         <div class="container my-2">
-          <h1 class="display-4">Nuestra Visión</h1>
+          <h1 class="display-4">Nuestra visión</h1>
         </div>
         <div class="container my-2">
           <h2 class="font-weight-light">Acerca de Nosotros</h2>
@@ -150,7 +150,7 @@
           <div class="row my-sm-2 my-md-2">
             <div class="col-sm">
               <div class="col-sm">
-                <h4>Compromiso Ecológico</h4>
+                <h4>Compromiso ecológico</h4>
                 <p class="pa"></p>
                 <p class="text-justify">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
@@ -182,7 +182,7 @@
             <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
             <ul class="mb-0 pb-2 foot-list">
               <li class="">
-                <a class="" href="vision.html">Nuestra Visión</a>
+                <a class="" href="vision.html">Nuestra visión</a>
               </li>
               <li class="">
                 <a class="" href="#">Noticias</a>
